added firebase scanner library